minitone85 now works correctly

--- a/minitone85/Makefile
+++ b/minitone85/Makefile
@@ -1,19 +1,22 @@
-CXX=avr-g++
-CXX_FLAGS=-g -Os -Wall -mcall-prologues -mmcu=attiny85
-BASE=minitone85
+CXX = avr-g++
+CXXFLAGS = -g -Os -Wall -mcall-prologues -mmcu=attiny85
+BASE=minitone
 
 .PHONY: install clean
 
-$(BASE).hex : $(BASE).o
+$(BASE).hex : $(BASE).elf
 	avr-objcopy -R .eeprom -O ihex $^ $@
 
-main.o : main.cc
-	$(CXX) $(CXX_FLAGS) -c main.cc 
+$(BASE).elf : main.o minitone85.o
+	$(CXX) -g -mmcu=attiny85 $^ -o $@ 
+
+.o :.cc
+	$(CXX) -c $^ 
 
 
 install:$(BASE).hex
 	install-hex $<
 
 clean :
-	rm -f *.hex *.obj *.o
+	rm -f *.hex *.obj *.o *.elf
 
