Preliminary cleanup of mins30 project

--- a/mins30-85/Makefile
+++ b/mins30-85/Makefile
@@ -1,36 +1,26 @@
-MCU=attiny85
-AVRDUDEMCU=t85
-CC=/usr/bin/avr-gcc
-CFLAGS=-g -Os -Wall -mcall-prologues -mmcu=$(MCU) -std=c11
-OBJ2HEX=/usr/bin/avr-objcopy
-AVRDUDE=/usr/local/bin/avrdude
-TARGET=blinky
+#MCU=attiny85
+#AVRDUDEMCU=t85
+CXX = avr-g++
+CXXFLAGS = -g -Os -Wall -mcall-prologues -mmcu=attiny85 -std=c++11
+#OBJ2HEX=/usr/bin/avr-objcopy
+#AVRDUDE=/usr/local/bin/avrdude
+#TARGET=blinky
 
-.PHONY : all clean install
+.PHONY : clean install
 
-blinky : blinky.c millis.c
-	$(CC) $(CFLAGS) $^  -o $(TARGET)
-	$(OBJ2HEX) -R .eeprom -O ihex $(TARGET) $(TARGET).hex
+image.hex : image.elf
+	avr-objcopy -R .eeprom -O ihex $^ $@
 
-all:
-	$(CC) $(CFLAGS) $(TARGET).c -o $(TARGET)
-	$(OBJ2HEX) -R .eeprom -O ihex $(TARGET) $(TARGET).hex
-	#rm -f $(TARGET)
+image.elf : main.o millis.cc ../minitone85/minitone85.o
+	$(CXX) -g -mmcu=attiny85 $^ -o $@ 
 
-install : $(TARGET)
-	sudo gpio -g mode 22 out
-	sudo gpio -g write 22 0
-	sudo $(AVRDUDE) -p $(AVRDUDEMCU) -P /dev/spidev0.0 -c linuxspi -b 10000 -U flash:w:$(TARGET).hex
-	sudo gpio -g write 22 1
 
-noreset : all
-	sudo $(AVRDUDE) -p $(AVRDUDEMCU) -P /dev/spidev0.0 -c linuxspi -b 10000 -U flash:w:$(TARGET).hex
+.i : .cc
+	$(CXX) -c $^
 
-fuse :
-	sudo gpio -g mode 22 out
-	sudo gpio -g write 22 0
-	sudo $(AVRDUDE) -p $(AVRDUDEMCU) -P /dev/spidev0.0 -c linuxspi -b 10000 -U lfuse:w:0x62:m -U hfuse:w:0xdf:m -U efuse:w:0xff:m
-	sudo gpio -g write 22 1
+install : image.hex
+	install-hex $<
+
 
 clean :
 	rm -f *.hex *.obj *.o $(TARGET)
