alarm now include mqtt connection

--- a/alarm/main/CMakeLists.txt
+++ b/alarm/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "alarm.c")
+set(COMPONENT_SRCS "alarm.c mqtt_alarm.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
