Added step 4 to sow

--- a/i2s/sow/sow32/main/CMakeLists.txt
+++ b/i2s/sow/sow32/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c 3step.c"
+idf_component_register(SRCS "main.c 3step.c 4step.c"
                     INCLUDE_DIRS ".")
