sow32 step5 now works fine

--- a/i2s/sow/sow32/main/CMakeLists.txt
+++ b/i2s/sow/sow32/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c 3step.c 4step.c 5step.c"
+idf_component_register(SRCS "main.c 3step.c 4step.c 5step.c track.c"
                     INCLUDE_DIRS ".")
